--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "npm": "^8.19.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.3.0",
     "recoil": "^0.7.5"
@@ -25,7 +26,8 @@
     "autoprefixer": "^10.4.9",
     "eslint-config-prettier": "^8.5.0",
     "postcss": "^8.4.16",
-    "prettier": "2.7.1",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
