--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.3.2",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "axios": "^0.27.2",
+    "framer-motion": "^6.5.1",
     "i": "^0.3.7",
     "npm": "^8.19.1",
     "react": "^18.2.0",
