--- a/package.json
+++ b/package.json
@@ -9,17 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.3.2",
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
     "axios": "^0.27.2",
-    "framer-motion": "^6.5.1",
-    "i": "^0.3.7",
+    "daisyui": "^2.28.0",
     "npm": "^8.19.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-query": "^3.39.2",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.3.0",
     "recoil": "^0.7.5"
   },
