--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aws-sdk": "^2.1230.0",
     "axios": "^0.27.2",
     "react": "^18.2.0",
+    "react-aws-s3-typescript": "^1.1.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-images-uploading": "^3.1.7",
     "react-query": "^3.39.2",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.3.0",
+    "react-s3": "^1.3.1",
     "recoil": "^0.7.5"
   },
   "devDependencies": {
