--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "recoil": "^0.7.5"
   },
   "devDependencies": {
+    "@types/node": "^18.8.3",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
