--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "aws-sdk": "^2.1230.0",
     "axios": "^0.27.2",
     "react": "^18.2.0",
+    "react-aws-s3-typescript": "^1.1.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-images-uploading": "^3.1.7",
