--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "aws-sdk": "^2.1230.0",
     "axios": "^0.27.2",
+    "html-react-parser": "^3.0.4",
     "react": "^18.2.0",
     "react-aws-s3-typescript": "^1.1.4",
     "react-dom": "^18.2.0",
